--- a/build.gradle
+++ b/build.gradle
@@ -28,11 +28,11 @@ dependencies {
 	implementation 'org.springframework.session:spring-session-core'
     implementation 'com.auth0:java-jwt:3.11.0'
 	compile 'io.jsonwebtoken:jjwt-api:0.11.2'
+	compile 'com.fasterxml.jackson.core:jackson-databind'
 	runtime 'io.jsonwebtoken:jjwt-impl:0.11.2'
 	runtime 'io.jsonwebtoken:jjwt-jackson:0.11.2'
 	implementation 'javax.xml.bind:jaxb-api'
 	compileOnly 'org.projectlombok:lombok'
-	runtimeOnly 'org.postgresql:postgresql'
 	runtimeOnly 'mysql:mysql-connector-java'
 	implementation 'com.okta.spring:okta-spring-boot-starter:1.4.0'
 	developmentOnly 'org.springframework.boot:spring-boot-devtools'
